Reorganize repository and release itself

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,18 +18,9 @@ jobs:
           fetch-tags: true
 
       - name: Install poetry
-        run: pipx install poetry
+        run: pipx install .
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-          cache: "poetry"
-
-      - run: poetry install
-        working-directory: .github/release
-
-      - run: poetry run release
-        working-directory: .github/release
+      - run: release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_LOG_LEVEL: DEBUG
