--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
 
-      - name: Install poetry
+      - name: Install release.py
         run: pipx install .
 
       - run: release
