--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ requires-python = ">=3.12,<4"
 dependencies = [
     "semver (>=3.0.4,<4.0.0)",
     "pygithub (>=2.6.1,<3.0.0)",
-    "gitpython (>=3.1.44,<4.0.0)"
+    "gitpython (>=3.1.44,<4.0.0)",
+    "python-magic (>=0.4.27,<0.5.0)"
 ]
 
 [project.scripts]
